src/test/deca/context/valid/testReadFloat.deca
// Decription : Teste readFloat
{
    float x;
    x = readFloat();
    println(x);
}
