src/test/deca/context/invalid/testPrintWrongArgs.deca
// Description : print avec mauvais argument
{
    println(true);
}
